# ghost-ark

./: .dockerignore  .gitignore  .gitleaks.toml  .npmrc  AGENTS.md  ARTIFACT_EVALUATION.md  CLAUDE.md  CODEX_TASKS.md  Dockerfile.reproducer  Dockerfile.reviewer  LICENSE  Makefile  README-AE.md  README.md  RECORDED_CHAITIN_DEMO.txt  RECORDED_CRDT_DEMO.txt  RECORDED_WORM_CONTAINMENT_DEMO.txt  SECURITY.md  cdk.json  docker-compose.reviewer.yml  ghost_ark_audit_payload.txt  package-lock.json  package.json  scratch_ifc.ts  stryker.config.json  vitest.config.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: artifact.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  docs.yml  infra-plan.yml  release-provenance.yml
apps/api/: package.json
apps/console/: index.html  package.json  vite.config.mjs
apps/glasshouse/: MutationWorkbench.tsx  README.md
attestations/nitro/: example.manifest.json
dab/: .dockerignore  Dockerfile  docker-compose.yml  reproduce.sh
dab/agent-runtime/: package-lock.json  package.json
dab/bench/: formal_games.ts  package.json  performance.ts  run_all.ts
dab/gateway/: Cargo.toml
dab/gateway/src/: lib.rs  main.rs  nonce.rs  phase1.rs  receipts.rs  signing.rs  v200.rs  verifier.rs
dab/gateway/src/bpf/: ghost_ark_ring0.bpf.c
dab/k8s/: README.md  RECORDED_K8S.txt  custody-networkpolicy.yaml  dab-roundtrip-job.yaml  run_demo.sh
dab/roundtrip/: README.md  RECORDED_CONCURRENT_STRESS.txt  RECORDED_REPLAY_WINDOW.txt  RECORDED_ROUNDTRIP.txt  RECORDED_SOCKET_E2E.txt  run_in_docker.sh  run_roundtrip.sh  run_socket_e2e.sh  run_socket_e2e_in_docker.sh
dab/verifier/: Cargo.toml
dab/verifier/src/: lib.rs  main.rs
docker/: seccomp-reproduce.json
docs/: GLOSSARY.md
docs/architecture/: ACC_ENFORCEMENT_ARCHITECTURE.md  ADR-0001-receipt-merkle-audit-chain.md  ADR-0002-key-manifest-lifecycle.md  ADR-0003-policy-invariant-verification.md  ASSUMPTION_LATTICE.md  CLAIM_BOUNDARIES.md  DYNAMODB_ACCESS_PATTERNS.md  INFRASTRUCTURE_ROADMAP_2030.md  OVERVIEW.md  governance-model.md  multi-account-topology.md  policy-counterexample-engine.md  receipt-lifecycle.md  receipt-proof-interface.md  runtime-attestation.md  system-overview.md  tenancy-model.md  transparency-witness-model.md
docs/artifact/: repository_inventory.md
docs/claims/: PHASE1_CLAIMS.md
docs/cloud/: architecture.md  bigquery-schema.md  deployment.md  receipt-lifecycle.md  security.md  threat-model.md
docs/compliance/: control-mapping.json  control-matrix.md  evidence-pack-template.md  non-claims.md
docs/defense/: DEFENSE_ANCHOR.md
schemas/: bigquery-receipt-row.schema.json  checkpoint-index.schema.json  claim_envelope.json  cloud-storage-manifest.schema.json  evidence-upload.schema.json  evidence_object.json  ghost_discretization_rule_receipt.v1.json  ghost_evidence_provenance.v1.json  ghost_receipt.v2.json  ghostark.assumptions.registry.v1.json  key-manifest.json  lineage_event.json  live-aws-evidence-bundle.schema.json  policy-counterexample.json  policy-verification-report.json  receipt-checkpoint.json  receipt-inclusion-proof.json  receipt-index.schema.json  receipt-proof-statement.json  receipt-proof.json  receipt-query.schema.json  receipt.json  runtime-attestation-policy.json  runtime-attestation.json  semantic-audit-receipt.json  verifier-report.json
scripts/: bootstrap-local.sh  reproduce.sh  run-attacks.sh  run-benchmarks.sh  run-local-demo.sh  run-proofs.sh  spawn-agent-cgroup.sh  supply-verify.sh
tests/: demo-cohort.ts
tools/: ghost-verify.mjs
tools/experiments/: Cargo.toml
tools/experiments/src/: lib.rs  stats.rs  timebase.rs
(+526 files in other folders)
