[package]
name = "dab-gateway"
version = "0.1.0"
edition = "2021"

authors = [
    "Ghost-Ark Research"
]

description = """
Ghost-Ark Declarative Action Binding (DAB) Tier-0
Trusted Gateway Enforcement Boundary
"""

license = "MIT"




[dependencies]

# Serialization boundary
serde = {
    version = "1.0",
    features = ["derive"]
}

serde_json = "1.0"



# Cryptographic primitives
sha2 = "0.10"

hex = "0.4"

base64 = "0.22"



# Receipt authentication
ed25519-dalek = {
    version = "2.1",
    features = [
        "rand_core"
    ]
}


rand = "0.8"



# HTTP execution boundary
reqwest = {
    version = "0.12",
    default-features = false,
    features = [
        "blocking",
        "json",
        "rustls-tls"
    ]
}



# Error handling
thiserror = "1.0"



# Secure randomness / system support
getrandom = "0.2"





[profile.release]

# Maximum optimization for benchmark artifact
opt-level = 3

# Remove unnecessary symbols
strip = true

# Link-time optimization
lto = true

# Single codegen unit improves optimization
codegen-units = 1



[profile.dev]

opt-level = 0
debug = true