[package]
name = "dab-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Ghost-Ark Research Lab"]
description = "Ghost-Ark Declarative Action Binding (DAB) Tier-0 Trusted Gateway Enforcement Boundary"
license = "MIT"

[dependencies]
# Concurrent Data Structures (Lock-Free Hot Path)
dashmap = "5.5"

# Asynchronous Runtime (Background GC)
tokio = { version = "1", features = ["rt", "time", "macros"] }

# Memory Allocation (For AWS Linux Deployments)
mimalloc = "0.1"

# Serialization Boundary
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic Primitives
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Receipt Authentication
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# HTTP Execution Boundary
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Infrastructure Support
thiserror = "1.0"
getrandom = "0.2"

[profile.release]
# Maximum optimization for production TCB artifact
opt-level = 3
strip = true
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true