[package]
name = "dab-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
Ghost-Ark Declarative Action Binding (DAB) Tier-0
Independent Receipt Verifier.

Trusts only a cryptographic signature and deterministic evidence — not the
agent runtime, not the gateway implementation, not the execution process.
"""
authors = ["Ghost-Ark Research"]

[lib]
name = "dab_verifier"
path = "src/lib.rs"

[[bin]]
name = "dab-verifier"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
